# HauntScriptAI

./: .env  .gitignore  README.md  app.py  covergen.py  format_txt.py  horror.py  promptmaker.py  pyproject.toml  requirements.txt
docs/: haunscript_documentation.md
utils/: __init__.py  covergen.py  formatting.py  promptmaker.py
