[project]
name = "horror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.21.1",
    "google-generativeai>=0.8.5",
    "pillow>=11.2.1",
    "streamlit>=1.46.0",
]
